# free-stream-message

./: .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  shell  test.db
backend/backend/: asgi.py  docker-compose.yml  settings.py  urls.py
backend/message_player/: admin.py  apps.py  consumers.py  models.py  serializer.py  urls.py  views.py
backend/message_player/migrations/: 0001_initial.py
backend/message_player/templates/: index.html
backend/stream_voice/: app.py  db.py  di.py  exception.py  messager.py  users.py  ws_channel.py
backend/stream_voice/accessors/: __init__.py  messager.py
backend/stream_voice/api/: __init__.py  friends.py  messages.py  users.py
backend/stream_voice/models/: __init__.py  friends.py  message.py  tunnel_token.py  user.py
backend/stream_voice/services/: __init__.py  friends.py  messager.py  tunnel_token.py  users.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/getMessage/: getMessage.tsx
frontend/src/components/notFound/: notFound.Styled.ts  notFound.tsx
frontend/src/components/registrationForm/: registrationForm.tsx
frontend/src/components/sendMessage/: sendMessage.tsx
